Bug 416061 - Console freezes when plotting data
Summary: Console freezes when plotting data
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kuserfeedback
Classification: Frameworks and Libraries
Component: Management and Analytics Console (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-09 17:38 UTC by Aleix Pol
Modified: 2020-02-16 09:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2020-01-09 17:38:36 UTC
SUMMARY
QObjectPrivate::setParent_helper|QObject::setParent|?UserFeedbackConsole? QObject 0x561d926b0590 (class: 'QtCharts::QLineSeries', object name: '') may have a loop in its parent-child chain; this is undefined behavior
QObjectPrivate::setParent_helper|QObject::setParent|?UserFeedbackConsole? QObject 0x561d926b0590 (class: 'QtCharts::QLineSeries', object name: '') may have a loop in its parent-child chain; this is undefined behavior
QObjectPrivate::setParent_helper|QObject::setParent|?UserFeedbackConsole? QObject 0x561d926b0590 (class: 'QtCharts::QLineSeries', object name: '') may have a loop in its parent-child chain; this is undefined behavior
QObjectPrivate::setParent_helper|QObject::setParent|?UserFeedbackConsole? QObject 0x561d926b0590 (class: 'QtCharts::QLineSeries', object name: '') may have a loop in its parent-child chain; this is undefined behavior

STEPS TO REPRODUCE
1. Select a product
2. choose a chart type, like "Usage time distribution"
3. *freeze*

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.14.1 git
Comment 1 Volker Krause 2020-02-16 09:24:38 UTC
Git commit 140c8ce688dfdf73ad485a2bb5559d45bbe08f3b by Volker Krause.
Committed on 16/02/2020 at 09:24.
Pushed by vkrause into branch 'master'.

Fix area charts with Qt 5.14

Summary:
Related: bug 417597

Reviewers: apol, davidedmundson

Reviewed By: apol, davidedmundson

Differential Revision: https://phabricator.kde.org/D27414

M  +3    -1    src/console/analytics/categoryaggregator.cpp
M  +3    -1    src/console/analytics/ratiosetaggregator.cpp

https://commits.kde.org/kuserfeedback/140c8ce688dfdf73ad485a2bb5559d45bbe08f3b