Fix area charts with Qt 5.14

Summary:
BUG: 416061
BUG: 417597

Reviewers: apol, davidedmundson

Reviewed By: apol, davidedmundson

Differential Revision: https://phabricator.kde.org/D27414